--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,21 +29,13 @@ body {
 }
 .location {
   color: #777;
-  padding: 8px 0;
-}
-.navbar {
-  text-transform: uppercase;
-  font-weight: 300;
-  margin: 0;
-  padding: 0;
-  font-size: 0.75em;
+  padding: 8px 0 0 0;
 }
 .profile {
-  min-height: 200px;
   /* box-shadow: 0px 0px 20px #ddd; */
   font-size: 2em;
   color: #333;
-  font-weight: 300;
+  font-weight: 200;
   z-index: 2;
 }
 
@@ -160,7 +152,7 @@ body {
 }
 
 .footer {
-  padding: 10px 0;
+  padding: 0px 0 30px 0;
   font-size: 1.5em;
 
 }
