--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,8 +1,9 @@
+$primary-color: "#7819ec";
+
 html,
 body {
   height: 100%;
 }
-
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 0.9em;
@@ -12,7 +13,6 @@ body {
   background-size: 100%;
   background-color: #f2eafd;
 }
-
 @media screen and (max-width: 600px) {
   body {
     background-size: auto;
@@ -21,23 +21,17 @@ body {
     max-width: 50px;
   }
 }
-
 #main {
-  -webkit-transition: all 0.25s;
   transition: all 0.25s;
 }
-
 .profile-img {
   border: 4px solid #fff;
-  -webkit-filter: saturate(0);
-          filter: saturate(0);
+  filter: saturate(0);
 }
-
 .location {
   color: #777;
   padding: 8px 0 0 0;
 }
-
 .profile {
   /* box-shadow: 0px 0px 20px #ddd; */
   font-size: 2em;
@@ -50,33 +44,26 @@ body {
   font-size: 3em;
   font-weight: 300;
 }
-
 .intro > .small {
   font-size: 1.2em;
 }
-
 .badge {
   padding: 0.3rem 0.4rem !important;
   font-weight: 300;
 }
-
 .badge-primary {
   background: #00c5e5;
 }
-
 .badge-success {
-  background: "#7819ec";
+  background: $primary-color;
 }
-
 .btn-primary {
-  background: "#7819ec";
+  background: $primary-color;
   border: none;
 }
-
 .btn-primary:hover {
   background: #842ded;
 }
-
 .modal {
   padding: 0 !important;
 }
@@ -90,9 +77,8 @@ body {
 .modal-body {
   background-color: tomato !important;
 }
-
 .modal {
-  background-image: linear-gradient(120deg, #764ba2 80%, "#7819ec" 100%);
+  background-image: linear-gradient(120deg, #764ba2 80%, $primary-color 100%);
 }
 
 .contact-box {
@@ -104,7 +90,6 @@ body {
 .modal-header {
   border-bottom: none;
 }
-
 .modal-header > button > span {
   color: #fff;
   font-size: 3rem;
@@ -121,34 +106,27 @@ body {
   background-color: #fff;
   overflow-x: hidden;
   padding-top: 40px;
-  -webkit-transition: all 0.25s ease-in-out;
   transition: all 0.25s ease-in-out;
-  -webkit-box-shadow: 0px 0px 30px 0px #c0c0c0;
-          box-shadow: 0px 0px 30px 0px #c0c0c0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-left: 2px solid "#7819ec";
+  box-shadow: 0px 0px 30px 0px #c0c0c0;
+  box-sizing: border-box;
+  border-left: 2px solid $primary-color;
 }
 
 .sidenav .skills {
   margin: 5px 20px;
 }
-
 .sidenav .work {
   margin: 5px 20px;
 }
-
 .skills > ul > li > span.small {
   color: #aaa;
 }
-
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
   color: #818181;
   display: block;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -177,17 +155,14 @@ body {
 .footer {
   padding: 0px 0 30px 0;
   font-size: 1.5em;
-}
 
-.footer a {
-  color: "#7819ec";
-  text-decoration: underline;
-  -webkit-text-decoration-style: dashed;
-          text-decoration-style: dashed;
+  a {
+    color: $primary-color;
+    text-decoration: underline;
+    text-decoration-style: dashed;
+  }
+  &:hover {
+    color: #842ded;
+    text-decoration: none;
+  }
 }
-
-.footer:hover {
-  color: #842ded;
-  text-decoration: none;
-}
-/*# sourceMappingURL=style.css.map */
